增加动画进度
增加动画进度

--- a/app/src/main/res/layout/activity_click.xml
+++ b/app/src/main/res/layout/activity_click.xml
@@ -23,6 +23,15 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_seek"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            />
         <Button
             android:layout_width="100dip"
             android:layout_height="40dip"
